# LSE64

./: .gitignore  AUTHORS  Comedi.txt  LSE64.txt  LSE64_Tutorial.html  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  sequencer.txt
modules/: Makefile.am  Makefile.in  modsequencer.c
src/: .gitignore  Makefile.am  Makefile.in  boot.lse  config.h.in  loadmod.c  loadmod_dl.c  lse64.c  lse64.h  primitives.c  strings.c
src/modules/: Makefile.am  comedi.c  fpga.c  ico.c  math.c
